exports[`invalid(1): {\"scripts\": {\"test\": \"/usr/bin/node --test\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "/usr/bin/node --test"}}

`;

exports[`invalid(1): {\"scripts\": {\"test\": \"/usr/bin/node --test\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "/usr/bin/node --test"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(10): {\"scripts\": {\"test\": \"PATH=https://example.com/bin:/usr/bin tool\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "PATH=https://example.com/bin:/usr/bin tool"}}

`;

exports[`invalid(10): {\"scripts\": {\"test\": \"PATH=https://example.com/bin:/usr/bin tool\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "PATH=https://example.com/bin:/usr/bin tool"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(11): {\"scripts\": {\"test\": \"OUT=/tmp=https://example.com tool\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "OUT=/tmp=https://example.com tool"}}

`;

exports[`invalid(11): {\"scripts\": {\"test\": \"OUT=/tmp=https://example.com tool\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "OUT=/tmp=https://example.com tool"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(12): {\"scripts\": {\"test\": \"(/usr/bin/node --test)\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "(/usr/bin/node --test)"}}

`;

exports[`invalid(12): {\"scripts\": {\"test\": \"(/usr/bin/node --test)\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "(/usr/bin/node --test)"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(13): {\"scripts\": {\"test\": \"echo $(/usr/bin/tool)\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "echo $(/usr/bin/tool)"}}

`;

exports[`invalid(13): {\"scripts\": {\"test\": \"echo $(/usr/bin/tool)\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "echo $(/usr/bin/tool)"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(14): {\"scripts\": {\"test\": \"C:/tools/node.exe test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "C:/tools/node.exe test.js"}}

`;

exports[`invalid(14): {\"scripts\": {\"test\": \"C:/tools/node.exe test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "C:/tools/node.exe test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(15): {\"scripts\": {\"test\": \"C:\\\\tools\\\\node.exe test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "C:\\\\tools\\\\node.exe test.js"}}

`;

exports[`invalid(15): {\"scripts\": {\"test\": \"C:\\\\tools\\\\node.exe test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "C:\\\\tools\\\\node.exe test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(16): {\"scripts\": {\"test\": \"\\\"C:\\\\Program Files\\\\tool.exe\\\" --version\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "\\"C:\\\\Program Files\\\\tool.exe\\" --version"}}

`;

exports[`invalid(16): {\"scripts\": {\"test\": \"\\\"C:\\\\Program Files\\\\tool.exe\\\" --version\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "\\"C:\\\\Program Files\\\\tool.exe\\" --version"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(17): {\"scripts\": {\"test\": \"\\\\tools\\\\test.exe\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "\\\\tools\\\\test.exe"}}

`;

exports[`invalid(17): {\"scripts\": {\"test\": \"\\\\tools\\\\test.exe\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "\\\\tools\\\\test.exe"}}
    |                      ^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(18): {\"scripts\": {\"test\": \"\\\\\\\\server\\\\share\\\\tool.exe\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "\\\\\\\\server\\\\share\\\\tool.exe"}}

`;

exports[`invalid(18): {\"scripts\": {\"test\": \"\\\\\\\\server\\\\share\\\\tool.exe\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "\\\\\\\\server\\\\share\\\\tool.exe"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(19): {\"scripts\": {\"test\": \"/usr/bin/node /tmp/test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "/usr/bin/node /tmp/test.js"}}

`;

exports[`invalid(19): {\"scripts\": {\"test\": \"/usr/bin/node /tmp/test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "/usr/bin/node /tmp/test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(2): {\"scripts\": {\"test\": \"node /Users/me/project/test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node /Users/me/project/test.js"}}

`;

exports[`invalid(2): {\"scripts\": {\"test\": \"node /Users/me/project/test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node /Users/me/project/test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(20): {\"scripts\": {\"test\": \"node --test\", \"test\": \"/usr/bin/node --test\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node --test", "test": "/usr/bin/node --test"}}

`;

exports[`invalid(20): {\"scripts\": {\"test\": \"node --test\", \"test\": \"/usr/bin/node --test\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node --test", "test": "/usr/bin/node --test"}}
    |                                             ^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(21): {\"scripts\": {\"test\": \"node --test\"}, \"scripts\": {\"test\": \"/usr/bin/node --test\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node --test"}, "scripts": {"test": "/usr/bin/node --test"}}

`;

exports[`invalid(21): {\"scripts\": {\"test\": \"node --test\"}, \"scripts\": {\"test\": \"/usr/bin/node --test\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node --test"}, "scripts": {"test": "/usr/bin/node --test"}}
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(3): {\"scripts\": {\"test\": \"\\\"/Applications/My Tool/tool\\\" --version\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "\\"/Applications/My Tool/tool\\" --version"}}

`;

exports[`invalid(3): {\"scripts\": {\"test\": \"\\\"/Applications/My Tool/tool\\\" --version\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "\\"/Applications/My Tool/tool\\" --version"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(4): {\"scripts\": {\"test\": \"node --test > /dev/null\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node --test > /dev/null"}}

`;

exports[`invalid(4): {\"scripts\": {\"test\": \"node --test > /dev/null\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node --test > /dev/null"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(5): {\"scripts\": {\"test\": \"CACHE_DIR=/tmp/cache node test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "CACHE_DIR=/tmp/cache node test.js"}}

`;

exports[`invalid(5): {\"scripts\": {\"test\": \"CACHE_DIR=/tmp/cache node test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "CACHE_DIR=/tmp/cache node test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(6): {\"scripts\": {\"test\": \"tool --config=/etc/tool.json\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "tool --config=/etc/tool.json"}}

`;

exports[`invalid(6): {\"scripts\": {\"test\": \"tool --config=/etc/tool.json\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "tool --config=/etc/tool.json"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(7): {\"scripts\": {\"test\": \"cc -I/usr/include source.c\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "cc -I/usr/include source.c"}}

`;

exports[`invalid(7): {\"scripts\": {\"test\": \"cc -I/usr/include source.c\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "cc -I/usr/include source.c"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(8): {\"scripts\": {\"test\": \"tool @/tmp/options\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "tool @/tmp/options"}}

`;

exports[`invalid(8): {\"scripts\": {\"test\": \"tool @/tmp/options\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "tool @/tmp/options"}}
    |                      ^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(9): {\"scripts\": {\"test\": \"PATH=bin:/usr/bin tool\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "PATH=bin:/usr/bin tool"}}

`;

exports[`invalid(9): {\"scripts\": {\"test\": \"PATH=bin:/usr/bin tool\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "PATH=bin:/usr/bin tool"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;
